--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
-    "material-ui": "1.0.0-beta.47",
+    "@material-ui/core": "4.9.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
